 /* $Id: ChangeLog,v 1.815 2000-03-18 15:14:29 sandervl Exp $ */

 2000-03-18: Sander van Leeuwen <sandervl@xs4all.nl>
	- ODINCRT: Added FS wrapper for _fdopen 
                   (fixes crash at exit in Professional MineSweeper when
                    selection About Odin from the system menu)
               
 2000-03-17: Christoph Bratschi <cbratschi@datacomm.ch>
	- COMCTL32: fixed trackbar buddy alignment
		    added useful internal tooltip styles

 2000-03-17: Sander van Leeuwen <sandervl@xs4all.nl>
	- WSOCK32: Semaphore protection for relay slot alloc/free
                   Fixed bug in WSAAsyncSelect.  Allow more than one
                   async call per window for RelayAlloc call. If it's not
                   alloced, pmwsock will return an error. Previously it was
                   overwriting slots for other async calls. (WSAAsyncGetHostName
                   in RealPlayer 7)
	- KERNEL32: Fixed handle creation for thread 0.

 2000-03-16: knut st. osmundsen <knut.stange.osmundse@pmsc.no>
    - TOOLS\FASTDEP:
            Speed optimizations: using AVL trees, include dir caching,
                dependencies stored in AVL tree until all files has been
                processes, buffered write.
            Cyclic dependency check.
            All files but the objectfiles now should have fully qualified paths.

    - INCLUDE\PDWIN32.TOOLS:
            DEPEND: Enabled cyclic check.

 2000-03-16: Sander van Leeuwen <sandervl@xs4all.nl>
	- USER32: Fixed virtual keycode of return key
                  TODO: Not done for all keys. Should probably looks at the
                        scancode (not virtual char) to translate keys.
	- GDI32:  RP7 calls CreateDIBSection with HDC 0; Call
                  GetWindowDC(GetDesktopWindow()) in that case
                  -> fixes crash (result of CreateDIBSection failure)
                  TODO: Looks like this is allowed in NT, but need to check