@@ -1,4 +1,4 @@
-/* $Id: rebar.h,v 1.3 1999-12-18 19:52:26 achimha Exp $ */
+/* $Id: rebar.h,v 1.4 2000-03-18 16:10:55 cbratschi Exp $ */
 
 /*
  * Rebar class extra info
@@ -11,6 +11,8 @@
 
 typedef struct tagREBAR_BAND
 {
+    COMCTL32_HEADER header;
+
     UINT    fStyle;
     COLORREF  clrFore;
     COLORREF  clrBack;
@@ -25,7 +27,7 @@ typedef struct tagREBAR_BAND
     UINT    cyMaxChild;
     UINT    cyIntegral;
     UINT    cxIdeal;
-    LPARAM    lParam;
+    LPARAM  lParam;
     UINT    cxHeader;
 
     UINT    uMinHeight;
@@ -36,32 +38,30 @@ typedef struct tagREBAR_BAND
     RECT    rcCapText;      /* calculated caption text rectangle */
     RECT    rcChild;        /* calculated child rectangle */
 
-    LPWSTR    lpText;
+    LPWSTR  lpText;
     HWND    hwndPrevParent;
 } REBAR_BAND;
 
 typedef struct tagREBAR_INFO
 {
+    COMCTL32_HEADER header;
+
     COLORREF   clrBk;       /* background color */
     COLORREF   clrText;     /* text color */
     HIMAGELIST himl;        /* handle to imagelist */
     UINT     uNumBands;   /* number of bands in the rebar */
     HWND     hwndToolTip; /* handle to the tool tip control */
-    HWND     hwndNotify;  /* notification window (parent) */
     HFONT    hFont;       /* handle to the rebar's font */
     SIZE     imageSize;   /* image size (image list) */
 
     SIZE     calcSize;    /* calculated rebar size */
     BOOL     bAutoResize; /* auto resize deadlock flag */
-    BOOL     bUnicode;    /* Unicode flag */
     HCURSOR  hcurArrow;   /* handle to the arrow cursor */
     HCURSOR  hcurHorz;    /* handle to the EW cursor */
     HCURSOR  hcurVert;    /* handle to the NS cursor */
     HCURSOR  hcurDrag;    /* handle to the drag cursor */
-    INT      iVersion;    /* version number */
 
     REBAR_BAND *bands;      /* pointer to the array of rebar bands */
-
 } REBAR_INFO;
 
 
